fixed horizonal scrollbar issue

--- a/css/style.css
+++ b/css/style.css
@@ -190,7 +190,7 @@
 
 .bonjour-page{
     display: grid;
-    width: 100vw;
+    width: 100%;
     height: 98vh;
     grid-template-columns: repeat(2, 1fr);
     background-color: #95261F;
@@ -274,7 +274,7 @@
 
 .tryout-page{
     display: grid;
-    width: 100vw;
+    width: 100%;
     height: auto;
     max-height: 83.5vh;
     background-color: #00657C;
@@ -294,7 +294,7 @@
 
 .tryout-image-fit{
     object-fit: cover;
-    max-width: 27vw;
+    max-width: 26.5vw;
     max-height: 83.5vh;
 }
 
@@ -314,7 +314,7 @@
 /* Start of coffee page - Yaroslav */
 .coffee-page{
     display: grid;
-    width: 100vw;
+    width: 100%;
     height: auto;
     max-height: 83.5vh;
     grid-template-columns: 35% 30% 35%;
